# llm-zoomcamp-capstone

./: .env_template  .gitignore  README.md  pyproject.toml  redeploy_app.sh  redeploy_dagster.sh  redeploy_grafana.sh  run_app.sh  setup_grafana_dashboard.sh
docker/: app.Dockerfile  dagster.Dockerfile  docker-compose.yaml  init.sql
monitoring/: grafana_dashboard.json  grafana_init.py
notebooks/: data-preparation.ipynb  rag-test.ipynb
notebooks/fuzzy_cache/: dvdrental_table_columns.pkl
pipeline/: dagster.yaml  repo.py  requirements.txt
sql_generator/: app.py  db.py  db_util.py  dummy.py  index.py  llm.py  llm_util.py  preprocessor.py  search.py  util.py
sql_generator/config/: llm.yaml  minsearch.yaml  preprocessor.yaml
sql_generator/templates/: basic_prompt.txt  cot_prompt.txt
