[tool.poetry]
name = "llm-zoomcamp-capstone"
version = "0.1.0"
description = ""
authors = ["Valery Rabinin <valery.rabinin@kraftheinz.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^3.0.0"
ipykernel = "^6.29.5"
scikit-learn = "^1.5.2"
openai = "^1.45.0"
psycopg2 = "^2.9.9"
fuzzywuzzy = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
